--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Hello</title>
+  <meta http-equiv="refresh" content="0; URL=900-001_search/search.html">
+
 </head>
 <body>
   <h1>Hello GitHub Pages!</h1>
