--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Hello</title>
-  /*<meta http-equiv="refresh" content="0; URL=900-001_search/search.html">*/
+  <!--<meta http-equiv="refresh" content="0; URL=900-001_search/search.html">-->
 
 </head>
 <body>
