--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
   <title>Hello</title>
-  <!--<meta http-equiv="refresh" content="0; URL=900-001_search/search.html">-->
+
 
 </head>
 <body>
   <h1>Hello GitHub Pages!</h1>
+  <a href="900-001_search/search.html">検索ページへ</a>
   <a href="100-000_neon_tetra/neon_tetra.html">ネオンテトラのページへ</a>
 
 </body>
