--- a/100-001_kihada/kihada.html
+++ b/100-001_kihada/kihada.html
@@ -7,6 +7,7 @@
             <link rel="stylesheet" href="../000_scripts/reset.css" />
             <link rel="stylesheet" href="../000_scripts/main_style.css" />
             <link rel="stylesheet" href="../000_scripts/menu.css" />
+            <link rel="icon" href="../001_images/001_main/favicon.png" type="image/x-icon" />
             <script src="../000_scripts/main_script.js" defer></script>
             <script src="../000_scripts/menu.js" defer></script>
             <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
@@ -14,7 +15,7 @@
         <body>
             <div class="header">
                 <a href="https://ioworld.jp/">
-                    <img src="../001_images/001_main/main_title.png" alt="main_title" class="header-logo" />
+                    <img src="../001_images/001_menu/main_title.png" alt="main_title" class="header-logo" />
                 </a>
             </div>
 
@@ -25,6 +26,7 @@
             <nav class="hamburger-menu hidden">
                 <ul>
                     <li class="menu-item"><a id="qrButton" href="javascript:void(0)">QRコードを撮影して検索</a></li>
+                    <li class="menu-item"><a href="https://haseyukigawa.github.io/ioworld/900-001_search">お魚検索</a></li>
                     <li class="menu-item"><a href="https://ioworld.jp/information#01">営業案内</a></li>
                     <li class="menu-item"><a href="https://ioworld.jp/access">アクセス</a></li>
                     <li class="menu-item"><a href="https://ioworld.jp/floor1">展示マップ</a></li>
@@ -41,7 +43,7 @@
                 <h1>キハダ</h1>
             </div>
             <div class="content-wrapper">
-                <img src="images/kihada.jpg" alt="キハダ" class="main-photo">
+                <img src="../001_images/002_main_pictures/kihada.jpg" alt="キハダ" class="main-photo">
 
                 <div class="tabs-wrapper">
                     <button class="scroll-btn scroll-left" aria-label="左にスクロール" id="scrollLeftBtn">
@@ -54,7 +56,7 @@
                         <button type="button" class="tablink" data-tab="detail">くわしく</button>
                         <button type="button" class="tablink" data-tab="comment">飼育員のひとこと</button>
                         <button type="button" class="tablink" data-tab="area">生息地</button>
-                        <button type="button" class="tablink" data-tab="quiz">魚クイズ</button>
+                        <button type="button" class="tablink" data-tab="quiz">お魚クイズ</button>
                         <button type="button" class="tablink" data-tab="trivia">豆知識「へぇ〜！」</button>
                         <button type="button" class="tablink" data-tab="exhibit">館内の展示位置</button>
                     </div>
@@ -73,8 +75,8 @@
                 </div>
                 <div id="comment" class="tab-content">
                     <p>とにかく元気！水槽の中でも泳ぎっぱなし。目が合うと“もっと速く泳げるぞ”って自慢してくるような、そんな魚です。</p>
-                    <img src="../001_images/003_keeper_pictures/hasegawa.png" alt="飼育員写真" class="keeper-photo" />
-                    <p class="keeper-name">（飼育員 ゆっきー）</p>
+                    <img src="../001_images/003_keeper_pictures/yuka.png" alt="飼育員写真" class="keeper-photo" />
+                    <p class="keeper-name">（飼育員 ゆうか）</p>
                 </div>
                 <div id="area" class="tab-content">
                     <p>太平洋やインド洋などの温暖な海に広く分布しています。日本では主に小笠原諸島、沖縄周辺、鹿児島県では主に奄美群島などの離島で漁獲されます。</p>
@@ -106,7 +108,7 @@
                 </div>
                 <div id="exhibit" class="tab-content">
                     <p>かごしま水族館で最も大きな水槽で、水量は1500㎥です。ジンベエザメやマグロやカツオなど黒潮の流れに乗って回遊する魚を展示しています。</p>
-                    <img src="" alt="展示場所" style="max-width:100%; border-radius:8px;" />
+                    <img src="../001_images/004_exhibit_location/2F_1.png" alt="展示場所" style="max-width:100%; border-radius:8px;" />
                 </div>
                 
                 <!-- フッター -->
