--- a/100-002_mononoke/mononoke.html
+++ b/100-002_mononoke/mononoke.html
@@ -3,7 +3,7 @@
         <head>
             <meta charset="UTF-8" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-            <title>ネオンテトラ紹介ページ</title>
+            <title>モノノケトンガリサカダザメ紹介ページ</title>
             <link rel="stylesheet" href="../000_scripts/reset.css" />
             <link rel="stylesheet" href="../000_scripts/main_style.css" />
             <link rel="stylesheet" href="../000_scripts/menu.css" />
@@ -40,10 +40,10 @@
 
             
             <div class="header-container">
-                <h1>ネオンテトラ</h1>
+                <h1>モノノケトンガリサカダザメ</h1>
             </div>
             <div class="content-wrapper">
-                <img src="../001_images/002_main_pictures/neon_tetra.jpg" alt="ネオンテトラ" class="main-photo">
+                <img src="../001_images/002_main_pictures/mononoke.jpg" alt="モノノケトンガリサカダザメ" class="main-photo">
 
                 <div class="tabs-wrapper">
                     <button class="scroll-btn scroll-left" aria-label="左にスクロール" id="scrollLeftBtn">
@@ -68,47 +68,47 @@
                 </div>
 
                 <div id="quick" class="tab-content active">
-                    <p>ネオンテトラは体長3〜4cmの小さな熱帯魚で、青と赤のラインが特徴です。水槽の中でも目立つ存在です。</p>
+                    <p>エイのような顔、サメのような体。2020年に日本で見つかったふしぎな新種のサメです！</p>
                 </div>
                 <div id="detail" class="tab-content">
-                    <p>ネオンテトラは南米アマゾン川流域原産の淡水魚で、温和な性格をしており群れで行動します。水質には敏感ですが初心者にも人気のある種類です。適温は22〜27℃程度。</p>
+                    <p>モノノケトンガリサカダザメは、2020年に日本近海で約10年ぶりに報告された新種のエイ（ガンギエイの仲間）で、その珍しさと見た目のインパクトから注目されました。頭部は平たく広がっていてエイのように見えますが、体は厚みがあり、サメのように高い背をしています。全長は約2メートルにもなり、鹿児島県を中心とした南日本の限られた海域でごくまれに定置網にかかるほどの、非常に珍しい種です。名前の由来にもなっている「モノノケ（妖怪）」は、その独特で神秘的な見た目から来ています。</p>
                 </div>
                 <div id="comment" class="tab-content">
-                    <p>「水槽の中を華やかにしたいなら、この子たちが一番！みんなでスイスイ泳いでかわいいですよ〜」</p>
-                    <img src="../001_images/003_keeper_pictures/hasegawa.png" alt="飼育員写真" class="keeper-photo" />
-                    <p class="keeper-name">（飼育員 ゆっきー）</p>
+                    <p>最初に見たとき、何かの幻かと思いました。こんな生き物が本当に日本にいたなんて、今でも信じられないくらいです。</p>
+                    <img src="../001_images/003_keeper_pictures/yukihiro.png" alt="飼育員写真" class="keeper-photo" />
+                    <p class="keeper-name">（飼育員 ゆきひろ）</p>
                 </div>
                 <div id="area" class="tab-content">
-                    <p>アマゾン川(アマゾナス川)の流れの緩やかな場所に生息。自然では群れで泳いで身を守ります。</p>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31812064.993774258!2d-72.0154702!3d-3.4653053!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91e67bb04a79db7b%3A0xa1876d1c10a5cfb2!2sAmazon%20River!5e0!3m2!1sen!2sjp&hl=ja" 
+                    <p>南日本沿岸（特に鹿児島県周辺）。日本でしか見つかっておらず、日本固有種の可能性が高いと考えられています。</p>
+                    <iframe src="" 
                         width="100%" height="400" style="border:0; border-radius: 8px;" allowfullscreen loading="lazy">
                     </iframe>
                 </div>
 
                 <div id="quiz" class="tab-content">
-                    <p class="question"><strong>Q1：</strong>ネオンテトラの青い光はなぜ光る？</p>
+                    <p class="question"><strong>Q1：</strong>モノノケトンガリサカダザメはどんな見た目をしている？</p>
                     <div class="options"
-                        data-correct-msg="✅ <strong>正解！</strong><br>ネオンテトラの青い光は、光の反射による構造色です。危険を避けたり仲間と合図を送るために使われます。"
-                        data-wrong-msg="❌ <strong>残念。</strong><br>正解は<strong>「3.光の反射による構造色だから」</strong>です。危険回避や仲間との合図に使われます。">
-                        <button onclick="checkAnswer(this)" data-correct="false">1. 体内の蛍光物質が発光しているから</button><button onclick="checkAnswer(this)" data-correct="false">2. 皮膚が化学反応で光るから</button><button onclick="checkAnswer(this)" data-correct="true">3. 光の反射による構造色だから</button>
+                        data-correct-msg="✅ <strong>正解！</strong><br>顔はエイ、体はサメ。ユニークな見た目が特徴なんです！"
+                        data-wrong-msg="❌ <strong>残念。</strong><br>正解は<strong>「1.エイのように平べったく、体が高い」</strong>です。このサメは、顔が平たくて体が高いという、ちょっと不思議な体型をしてるんだよ！">
+                        <button onclick="checkAnswer(this)" data-correct="true">1. エイのように平べったく、体が高い</button><button onclick="checkAnswer(this)" data-correct="false">2. サンマのように細長い</button><button onclick="checkAnswer(this)" data-correct="false">3. タコのように足がたくさんある</button>
                     </div>
                     <div id="feedback1" class="feedback"></div>
 
-                    <p class="question"><strong>Q2：</strong>ネオンテトラの体色に見られる「構造色」とは何ですか？</p>
+                    <p class="question"><strong>Q2：</strong>モノノケトンガリサカダザメはどれくらい見つかっている？</p>
                     <div class="options"
-                        data-correct-msg="✅ <strong>正解！</strong><br>構造色は光の反射や干渉によって生じる色のことです。"
-                        data-wrong-msg="❌ <strong>残念。</strong><br>正解は<strong>「2.光の反射や干渉による色」</strong>です。構造色とは光の反射や干渉による色です。">
-                        <button onclick="checkAnswer(this)" data-correct="false">1. 体内の色素による色</button><button onclick="checkAnswer(this)" data-correct="true">2. 光の反射や干渉による色</button><button onclick="checkAnswer(this)" data-correct="false">3. 食べた餌の色が反映された色</button>
+                        data-correct-msg="✅ <strong>正解！</strong><br>鹿児島など南日本で、ごくまれにしか見つかっていないんです。"
+                        data-wrong-msg="❌ <strong>残念。</strong><br>正解は<strong>「3.南日本でごくまれに見つかる」</strong>です。実はとっても珍しくて、南日本でしか見つかっていないんだよ。">
+                        <button onclick="checkAnswer(this)" data-correct="false">1. 日本中でよく見られる</button><button onclick="checkAnswer(this)" data-correct="false">2. 世界中で見つかっている</button><button onclick="checkAnswer(this)" data-correct="true">3. 南日本でごくまれに見つかる</button>
                     </div>
                     <div id="feedback2" class="feedback"></div>
                 </div>
 
                 <div id="trivia" class="tab-content">
-                    <p>ネオンテトラは一度に100個以上の卵を産みますが、親が卵を食べてしまうため、繁殖時には隔離が必要！</p>
+                    <p>「モノノケトンガリサカダザメ」という名前は、見た目の不思議さから“もののけ（妖怪）”を連想させることと、尖った背の形「トンガリ」、そして分類上「サカダザメ類」に属することから名付けられました。名前にインパクトがありますが、実はおとなしい性格。今のところ水族館などでの飼育例もほとんどなく、生態は謎に包まれています。</p>
                 </div>
                 <div id="exhibit" class="tab-content">
-                    <p>ネオンテトラは2階熱帯魚展示室の中央水槽にて展示しています。青と赤の美しい光が目印です。</p>
-                    <img src="../001_images/004_exhibit_location/99F_99.png" alt="展示場所" style="max-width:100%; border-radius:8px;" />
+                    <p>かごしま水族館で最も大きな水槽で、水量は1500㎥です。ジンベエザメやマグロやカツオなど黒潮の流れに乗って回遊する魚を展示しています。</p>
+                    <img src="../001_images/004_exhibit_location/2F_1.png" alt="展示場所" style="max-width:100%; border-radius:8px;" />
                 </div>
                 
                 <!-- フッター -->
