--- a/100-003_torafu_zame/torafu_zame.html
+++ b/100-003_torafu_zame/torafu_zame.html
@@ -3,7 +3,7 @@
         <head>
             <meta charset="UTF-8" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-            <title>ネオンテトラ紹介ページ</title>
+            <title>トラフザメ紹介ページ</title>
             <link rel="stylesheet" href="../000_scripts/reset.css" />
             <link rel="stylesheet" href="../000_scripts/main_style.css" />
             <link rel="stylesheet" href="../000_scripts/menu.css" />
@@ -40,10 +40,10 @@
 
             
             <div class="header-container">
-                <h1>ネオンテトラ</h1>
+                <h1>トラフザメ</h1>
             </div>
             <div class="content-wrapper">
-                <img src="../001_images/002_main_pictures/neon_tetra.jpg" alt="ネオンテトラ" class="main-photo">
+                <img src="../001_images/002_main_pictures/torafu_zame.jpg" alt="トラフザメ" class="main-photo">
 
                 <div class="tabs-wrapper">
                     <button class="scroll-btn scroll-left" aria-label="左にスクロール" id="scrollLeftBtn">
@@ -68,47 +68,52 @@
                 </div>
 
                 <div id="quick" class="tab-content active">
-                    <p>ネオンテトラは体長3〜4cmの小さな熱帯魚で、青と赤のラインが特徴です。水槽の中でも目立つ存在です。</p>
+                    <p>ヒョウ柄模様と長～い尾びれが特徴の、ゆったり泳ぐおとなしいサメです。</p>
                 </div>
                 <div id="detail" class="tab-content">
-                    <p>ネオンテトラは南米アマゾン川流域原産の淡水魚で、温和な性格をしており群れで行動します。水質には敏感ですが初心者にも人気のある種類です。適温は22〜27℃程度。</p>
+                    <p>トラフザメは、ジンベエザメ科に属する底生性のサメで、幼魚のころは白と黒のシマ模様をしており、英語名の「Zebra Shark（シマウマサメ）」はそこから来ています。成長すると体にヒョウのような模様が現れ、体の半分近くを占める長い尾びれが特徴です。
+日本での記録は非常に限られており、佐渡島、千葉県館山、土佐湾、沖縄県宮古島などの報告のみですが、南西諸島ではダイバーによる水中での目撃例が複数あります。
+
+今回の個体は、鹿児島本土の開聞岳ふもとの定置網で捕獲されたオス（全長185cm）で、鹿児島本土では初めての確認例と考えられています。黒潮に乗って移動してきたものとみられています。
+水族館に運ばれたときは痩せていましたが、翌日からすぐにエサを食べるほど元気を回復。約80日間の予備飼育を経て、大水槽での展示が始まりました。</p>
                 </div>
                 <div id="comment" class="tab-content">
-                    <p>「水槽の中を華やかにしたいなら、この子たちが一番！みんなでスイスイ泳いでかわいいですよ〜」</p>
+                    <p>このトラフザメは、鹿児島本土ではとてもめずらしい記録なんです。黒潮に乗ってやってきたのかもしれません。実は、トラフザメは絶滅危惧種に指定されていて、今では世界中で個体数が減っています。そんな貴重なサメを間近で見られるのはとても特別なことなんですよ。水槽の中でゆったり泳ぐ姿を、ぜひじっくり観察してみてくださいね。</p>
                     <img src="../001_images/003_keeper_pictures/hasegawa.png" alt="飼育員写真" class="keeper-photo" />
                     <p class="keeper-name">（飼育員 ゆっきー）</p>
                 </div>
                 <div id="area" class="tab-content">
-                    <p>アマゾン川(アマゾナス川)の流れの緩やかな場所に生息。自然では群れで泳いで身を守ります。</p>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31812064.993774258!2d-72.0154702!3d-3.4653053!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91e67bb04a79db7b%3A0xa1876d1c10a5cfb2!2sAmazon%20River!5e0!3m2!1sen!2sjp&hl=ja" 
+                    <p>インド太平洋の熱帯・亜熱帯の浅い海。
+日本では主に南西諸島に分布。今回のような鹿児島本土での確認はきわめて珍しい例です。</p>
+                    <iframe src="" 
                         width="100%" height="400" style="border:0; border-radius: 8px;" allowfullscreen loading="lazy">
                     </iframe>
                 </div>
 
                 <div id="quiz" class="tab-content">
-                    <p class="question"><strong>Q1：</strong>ネオンテトラの青い光はなぜ光る？</p>
+                    <p class="question"><strong>Q1：</strong>トラフザメの英語名「Zebra Shark」（シマウマ サメ）は、何に由来しているでしょう？</p>
                     <div class="options"
-                        data-correct-msg="✅ <strong>正解！</strong><br>ネオンテトラの青い光は、光の反射による構造色です。危険を避けたり仲間と合図を送るために使われます。"
-                        data-wrong-msg="❌ <strong>残念。</strong><br>正解は<strong>「3.光の反射による構造色だから」</strong>です。危険回避や仲間との合図に使われます。">
-                        <button onclick="checkAnswer(this)" data-correct="false">1. 体内の蛍光物質が発光しているから</button><button onclick="checkAnswer(this)" data-correct="false">2. 皮膚が化学反応で光るから</button><button onclick="checkAnswer(this)" data-correct="true">3. 光の反射による構造色だから</button>
+                        data-correct-msg="✅ <strong>正解！</strong><br>幼魚のころは白黒のシマ模様で、まるでシマウマみたいなんです！"
+                        data-wrong-msg="❌ <strong>残念。</strong><br>正解は<strong>「1.しま模様の幼魚時代の姿」</strong>です。ラフザメの幼魚にはシマウマのようなしま模様があるから「Zebra Shark」って呼ばれてるんだよ。">
+                        <button onclick="checkAnswer(this)" data-correct="true">1. しま模様の幼魚時代の姿</button><button onclick="checkAnswer(this)" data-correct="false">2. 速く泳ぐから</button><button onclick="checkAnswer(this)" data-correct="false">3. シマウマのなかまだから</button>
                     </div>
                     <div id="feedback1" class="feedback"></div>
 
-                    <p class="question"><strong>Q2：</strong>ネオンテトラの体色に見られる「構造色」とは何ですか？</p>
+                    <p class="question"><strong>Q2：</strong>トラフザメの尾びれの長さは、体のどのくらいの長さでしょう？</p>
                     <div class="options"
-                        data-correct-msg="✅ <strong>正解！</strong><br>構造色は光の反射や干渉によって生じる色のことです。"
-                        data-wrong-msg="❌ <strong>残念。</strong><br>正解は<strong>「2.光の反射や干渉による色」</strong>です。構造色とは光の反射や干渉による色です。">
-                        <button onclick="checkAnswer(this)" data-correct="false">1. 体内の色素による色</button><button onclick="checkAnswer(this)" data-correct="true">2. 光の反射や干渉による色</button><button onclick="checkAnswer(this)" data-correct="false">3. 食べた餌の色が反映された色</button>
+                        data-correct-msg="✅ <strong>正解！</strong><br>トラフザメの長い尾びれは、体の約半分の長さもあるんです。水の中でゆったりと動かす姿がとても優雅ですよ。"
+                        data-wrong-msg="❌ <strong>残念。</strong><br>正解は<strong>「2.体の半分くらい」</strong>です。ラフザメの尾びれは、体の半分ほどの長さがあるのが特徴なんだ。水槽でじっくり見てみてね！">
+                        <button onclick="checkAnswer(this)" data-correct="false">1. 体の4分の1くらい</button><button onclick="checkAnswer(this)" data-correct="true">2. 体の半分くらい</button><button onclick="checkAnswer(this)" data-correct="false">3. 体と同じくらい</button>
                     </div>
                     <div id="feedback2" class="feedback"></div>
                 </div>
 
                 <div id="trivia" class="tab-content">
-                    <p>ネオンテトラは一度に100個以上の卵を産みますが、親が卵を食べてしまうため、繁殖時には隔離が必要！</p>
+                    <p></p>
                 </div>
                 <div id="exhibit" class="tab-content">
-                    <p>ネオンテトラは2階熱帯魚展示室の中央水槽にて展示しています。青と赤の美しい光が目印です。</p>
-                    <img src="../001_images/004_exhibit_location/99F_99.png" alt="展示場所" style="max-width:100%; border-radius:8px;" />
+                    <p>かごしま水族館で最も大きな水槽で、水量は1500㎥です。ジンベエザメやマグロやカツオなど黒潮の流れに乗って回遊する魚を展示しています。</p>
+                    <img src="../001_images/004_exhibit_location/2F_1.png" alt="展示場所" style="max-width:100%; border-radius:8px;" />
                 </div>
                 
                 <!-- フッター -->
