--- a/100-008_katsuo/katsuo.html
+++ b/100-008_katsuo/katsuo.html
@@ -3,7 +3,7 @@
         <head>
             <meta charset="UTF-8" />
             <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-            <title>ネオンテトラ紹介ページ</title>
+            <title>カツオ紹介ページ</title>
             <link rel="stylesheet" href="../000_scripts/reset.css" />
             <link rel="stylesheet" href="../000_scripts/main_style.css" />
             <link rel="stylesheet" href="../000_scripts/menu.css" />
@@ -40,10 +40,10 @@
 
             
             <div class="header-container">
-                <h1>ネオンテトラ</h1>
+                <h1>カツオ</h1>
             </div>
             <div class="content-wrapper">
-                <img src="../001_images/002_main_pictures/neon_tetra.jpg" alt="ネオンテトラ" class="main-photo">
+                <img src="../001_images/002_main_pictures/katsuo.jpg" alt="カツオ" class="main-photo">
 
                 <div class="tabs-wrapper">
                     <button class="scroll-btn scroll-left" aria-label="左にスクロール" id="scrollLeftBtn">
@@ -68,47 +68,47 @@
                 </div>
 
                 <div id="quick" class="tab-content active">
-                    <p>ネオンテトラは体長3〜4cmの小さな熱帯魚で、青と赤のラインが特徴です。水槽の中でも目立つ存在です。</p>
+                    <p>海を高速で泳ぐ魚で、かつお節の材料として有名です。</p>
                 </div>
                 <div id="detail" class="tab-content">
-                    <p>ネオンテトラは南米アマゾン川流域原産の淡水魚で、温和な性格をしており群れで行動します。水質には敏感ですが初心者にも人気のある種類です。適温は22〜27℃程度。</p>
+                    <p>世界中の温帯〜熱帯に広く分布し、1.2ｍほどに成長します。鹿児島では枕崎港が有名な水揚げ地です。</p>
                 </div>
                 <div id="comment" class="tab-content">
-                    <p>「水槽の中を華やかにしたいなら、この子たちが一番！みんなでスイスイ泳いでかわいいですよ〜」</p>
-                    <img src="../001_images/003_keeper_pictures/hasegawa.png" alt="飼育員写真" class="keeper-photo" />
-                    <p class="keeper-name">（飼育員 ゆっきー）</p>
+                    <p>かごしま水族館では毎年8月ごろ、幼魚を捕獲して展示しています。</p>
+                    <img src="../001_images/003_keeper_pictures/yukihiro.png" alt="飼育員写真" class="keeper-photo" />
+                    <p class="keeper-name">（飼育員 ゆきひろ）</p>
                 </div>
                 <div id="area" class="tab-content">
-                    <p>アマゾン川(アマゾナス川)の流れの緩やかな場所に生息。自然では群れで泳いで身を守ります。</p>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31812064.993774258!2d-72.0154702!3d-3.4653053!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x91e67bb04a79db7b%3A0xa1876d1c10a5cfb2!2sAmazon%20River!5e0!3m2!1sen!2sjp&hl=ja" 
+                    <p>温帯〜熱帯の海域</p>
+                    <iframe src="" 
                         width="100%" height="400" style="border:0; border-radius: 8px;" allowfullscreen loading="lazy">
                     </iframe>
                 </div>
 
                 <div id="quiz" class="tab-content">
-                    <p class="question"><strong>Q1：</strong>ネオンテトラの青い光はなぜ光る？</p>
+                    <p class="question"><strong>Q1：</strong>カツオはどこでたくさんとれるかな？</p>
                     <div class="options"
-                        data-correct-msg="✅ <strong>正解！</strong><br>ネオンテトラの青い光は、光の反射による構造色です。危険を避けたり仲間と合図を送るために使われます。"
-                        data-wrong-msg="❌ <strong>残念。</strong><br>正解は<strong>「3.光の反射による構造色だから」</strong>です。危険回避や仲間との合図に使われます。">
-                        <button onclick="checkAnswer(this)" data-correct="false">1. 体内の蛍光物質が発光しているから</button><button onclick="checkAnswer(this)" data-correct="false">2. 皮膚が化学反応で光るから</button><button onclick="checkAnswer(this)" data-correct="true">3. 光の反射による構造色だから</button>
+                        data-correct-msg="✅ <strong>正解！</strong><br>枕崎港はカツオの水揚げでとても有名です。"
+                        data-wrong-msg="❌ <strong>残念。</strong><br>正解は<strong>「1.鹿児島の枕崎港」</strong>です。他の場所ではカツオはあまりとれません。">
+                        <button onclick="checkAnswer(this)" data-correct="true">1. 鹿児島の枕崎港</button><button onclick="checkAnswer(this)" data-correct="false">2. 東京湾</button><button onclick="checkAnswer(this)" data-correct="false">3. 琵琶湖</button>
                     </div>
                     <div id="feedback1" class="feedback"></div>
 
-                    <p class="question"><strong>Q2：</strong>ネオンテトラの体色に見られる「構造色」とは何ですか？</p>
+                    <p class="question"><strong>Q2：</strong>かごしま水族館で展示しているカツオはどんな個体？</p>
                     <div class="options"
-                        data-correct-msg="✅ <strong>正解！</strong><br>構造色は光の反射や干渉によって生じる色のことです。"
-                        data-wrong-msg="❌ <strong>残念。</strong><br>正解は<strong>「2.光の反射や干渉による色」</strong>です。構造色とは光の反射や干渉による色です。">
-                        <button onclick="checkAnswer(this)" data-correct="false">1. 体内の色素による色</button><button onclick="checkAnswer(this)" data-correct="true">2. 光の反射や干渉による色</button><button onclick="checkAnswer(this)" data-correct="false">3. 食べた餌の色が反映された色</button>
+                        data-correct-msg="✅ <strong>正解！</strong><br>約25cmの幼魚が展示されています。"
+                        data-wrong-msg="❌ <strong>残念。</strong><br>正解は<strong>「2.子どもで25cmの個体」</strong>です。成魚ではなく、8月に捕獲された幼魚です。">
+                        <button onclick="checkAnswer(this)" data-correct="false">1. 成魚で1.2ｍの個体</button><button onclick="checkAnswer(this)" data-correct="true">2. 子どもで25cmの個体</button><button onclick="checkAnswer(this)" data-correct="false">3. 冷凍で保存された個体</button>
                     </div>
                     <div id="feedback2" class="feedback"></div>
                 </div>
 
                 <div id="trivia" class="tab-content">
-                    <p>ネオンテトラは一度に100個以上の卵を産みますが、親が卵を食べてしまうため、繁殖時には隔離が必要！</p>
+                    <p>カツオは泳ぎ続けないと呼吸ができないため、常に泳ぎながら海水中の酸素を取り込んでいます。</p>
                 </div>
                 <div id="exhibit" class="tab-content">
-                    <p>ネオンテトラは2階熱帯魚展示室の中央水槽にて展示しています。青と赤の美しい光が目印です。</p>
-                    <img src="../001_images/004_exhibit_location/99F_99.png" alt="展示場所" style="max-width:100%; border-radius:8px;" />
+                    <p>かごしま水族館で最も大きな水槽で、水量は1500㎥です。ジンベエザメやマグロやカツオなど黒潮の流れに乗って回遊する魚を展示しています。</p>
+                    <img src="../001_images/004_exhibit_location/2F_1.png" alt="展示場所" style="max-width:100%; border-radius:8px;" />
                 </div>
                 
                 <!-- フッター -->
