--- a/100-006_suma/suma.html
+++ b/100-006_suma/suma.html
@@ -26,7 +26,7 @@
             <nav class="hamburger-menu hidden">
                 <ul>
                     <li class="menu-item"><a id="qrButton" href="javascript:void(0)">QRコードを撮影して検索</a></li>
-                    <li class="menu-item"><a href="https://haseyukigawa.github.io/ioworld/900-001_search">お魚検索</a></li>
+                    <li class="menu-item"><a href="https://haseyukigawa.github.io/ioworld/900-001_search/search.html">お魚検索</a></li>
                     <li class="menu-item"><a href="https://ioworld.jp/information#01">営業案内</a></li>
                     <li class="menu-item"><a href="https://ioworld.jp/access">アクセス</a></li>
                     <li class="menu-item"><a href="https://ioworld.jp/floor1">展示マップ</a></li>
