--- a/900-001_search/search.html
+++ b/900-001_search/search.html
@@ -28,6 +28,7 @@
             <nav class="hamburger-menu hidden">
                 <ul>
                     <li class="menu-item"><a id="qrButton" href="javascript:void(0)">QRコードを撮影して検索</a></li>
+                    <li class="menu-item"><a href="https://haseyukigawa.github.io/ioworld/900-001_search/search.html">お魚検索</a></li>
                     <li class="menu-item"><a href="https://ioworld.jp/information#01">営業案内</a></li>
                     <li class="menu-item"><a href="https://ioworld.jp/access">アクセス</a></li>
                     <li class="menu-item"><a href="https://ioworld.jp/floor1">展示マップ</a></li>
@@ -59,6 +60,11 @@
             <div id="search-result"></div>
         </div>
 
+        <div class="search-option">
+            <h2>③ 一覧から選択</h2>
+            <button id="show-list-button">一覧を表示</button>
+            <ul id="item-list" style="display: none; list-style: none; padding-left: 0;"></ul>
+        </div>
 
         <!-- フッター -->
         <div class="footer">
