--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Hello</title>
-
-
+  <meta http-equiv="refresh" content="0; URL=900-001_search/search.html" />
+  <title>Redirecting...</title>
 </head>
 <body>
-  <h1>Hello GitHub Pages!</h1>
-  <a href="900-001_search/search.html">検索ページへ</a>
-  <a href="100-000_neon_tetra/neon_tetra.html">ネオンテトラのページへ</a>
+  <p>自動的に遷移しない場合は、<a href="900-001_search/search.html">こちらをクリック</a>してください。</p>
 
+  <!--<h1>Hello GitHub Pages!</h1>
+  <a href="900-001_search/search.html">検索ページへ</a>
+  <a href="100-000_neon_tetra/neon_tetra.html">ネオンテトラのページへ</a>-->
 </body>
 </html>
